kubernetes/ingress/webui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webui-ingress
  # namespace: webui
  annotations:
    # Use appropriate annotations for your Ingress controller, e.g., for NGINX:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ruhig.bleiben.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webui-service
            port:
              number: 8080
